[package]
name = "miditits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.18.1"
egui_glium = "0.18.0"
futures = "0.3.21"
glium = "0.31"
# glium = "0.32.1"
midir = "0.8.0"
rayon = "1.5.3"
tokio = { version = "1.20.1", features = ["rt", "time", "rt-multi-thread"] }
